[package]
name = "tsunu-alive-lite"
version = "0.1.3"
description = "Tsunu Alive Lite - 阿宇陪你寫程式（輕量版）"
authors = ["阿童 ATone and her Claude Code (楊竣宇 AYu)"]
edition = "2021"

[lib]
name = "tsunu_alive_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-pty = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync"] }
